spacing fixes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -170,7 +170,7 @@ h4 {
 }
 
 .tab-container {
-	padding: 0% 5% 0% 5%;
+	padding: 0% 5% 0% 0%;
     -webkit-box-pack: start;
     -webkit-justify-content: normal;
 	justify-content:normal;
@@ -844,7 +844,7 @@ a:link {
 	text-decoration: none;
 	display: inline-block;
   	font-size: 18px;
-	margin: 4px 2px 2px 32px;
+	margin: 4px 2px 2px 0px;
 	transition-duration: 0.4s;
 	cursor: pointer;
 	box-shadow:  0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -867,7 +867,7 @@ a:link {
 	text-decoration: none;
 	display: inline-block;
 	font-size: 18px;
-	margin: 4px 2px 2px 32px;
+	margin: 4px 2px 2px 0px;
 	transition-duration: 0.4s;
 	cursor: pointer;
 	box-shadow:  0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -890,7 +890,7 @@ a:link {
 	text-decoration: none;
 	display: inline-block;
 	font-size: 18px;
-	margin: 0% 3% 1% 6%;
+	margin: 4px 2px 2px 0px;
 	transition-duration: 0.4s;
 	cursor: pointer;
 	box-shadow:  0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -913,7 +913,7 @@ a:link {
     text-decoration: none;
     display: inline-block;
     font-size: 115%;
-    margin: 4px 2px 2px 32px;
+    margin: 4px 2px 2px 0px;
     transition-duration: 0.4s;
     cursor: pointer;
     box-shadow: 0 8px 16px 0 rgb(0 0 0 / 30%), 0 6px 20px 0 rgb(0 0 0 / 19%);
@@ -937,7 +937,7 @@ a:link {
 	text-decoration: none;
 	display: inline-block;
 	font-size: 18px;
-	margin: 4px 2px 2px 32px;
+	margin: 4px 2px 2px 0px;
 	transition-duration: 0.4s;
 	cursor: pointer;
 	box-shadow:  0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -948,33 +948,11 @@ a:link {
   color: black;
 }
 
-.stats_row {
-display: -webkit-flex;
-display: flex;
-height: 150px;
-margin-top: 5em;
-}
-
-.stats_column {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  padding: 10px;
-}
-
 .row:after {
 content: "";
 display: block;
 clear: both;
 width: 100%;
-}
-
-.img-column {
-float: left;
-width: 35%;
-flex-wrap: wrap;
-padding: 2px;
-display: flex;
 }
 
 .column {
